使用osascript避免NSAppleScript执行失败

--- a/V2rayU/zh-HK.lproj/Localizable.strings
+++ b/V2rayU/zh-HK.lproj/Localizable.strings
@@ -5,3 +5,8 @@
   Created by yanue on 2019/7/17.
   Copyright © 2019 yanue. All rights reserved.
 */
+"InstallAlertTitle" = "V2rayU 需要使用管理员权限安装 V2rayUTool 到 ~/.V2rayU/V2rayUTool";
+"InstallV2rayUToolFailed" = "安装 V2rayUTool 失败"
+"HttpPortInUseMessage" = "http端口 %@ 已被使用, 请更换";
+"Install" = "Install"
+"Quit" = "Quit"
