--- a/V2rayU/zh-Hans.lproj/PreferenceGeneral.strings
+++ b/V2rayU/zh-Hans.lproj/PreferenceGeneral.strings
@@ -1,34 +1,30 @@
 
-/* Class = "NSButtonCell"; title = "show logs"; ObjectID = "0fD-xL-Tly"; */
-"0fD-xL-Tly.title" = "显示日志";
+/* Class = "NSTextFieldCell"; title = "Toggle V2ray On/Off:"; ObjectID = "0rn-re-Wn3"; */
+"0rn-re-Wn3.title" = "启停 V2ray:";
+
+/* Class = "NSButtonCell"; title = "Automatically update servers from subscriptions "; ObjectID = "1FR-Yu-tqb"; */
+"1FR-Yu-tqb.title" = "自动更新订阅列表(启动和唤醒时)";
 
 /* Class = "NSButtonCell"; title = "Check for Updates..."; ObjectID = "2p9-GL-XZ9"; */
 "2p9-GL-XZ9.title" = "检查更新";
 
-/* Class = "NSButtonCell"; title = "clear logs"; ObjectID = "2vr-uU-fMI"; */
-"2vr-uU-fMI.title" = "清除日志";
+/* Class = "NSTextFieldCell"; title = "Switch Proxy Mode:"; ObjectID = "Eu4-bo-oYs"; */
+"Eu4-bo-oYs.title" = "切换代理模式:";
 
 /* Class = "NSButtonCell"; title = "Launch V2rayU at login"; ObjectID = "NZE-cI-j04"; */
 "NZE-cI-j04.title" = "开机自动启动";
 
-/* Class = "NSButtonCell"; title = "Feedback..."; ObjectID = "QjX-NH-23u"; */
-"QjX-NH-23u.title" = "问题反馈...";
-
-/* Class = "NSButtonCell"; title = "Clear Logs  Everyday Automutically"; ObjectID = "hIN-yp-Qul"; */
-"hIN-yp-Qul.title" = "每次启动自动清除日志";
-
-/* Class = "NSButtonCell"; title = "Check for Updates automutically"; ObjectID = "m2S-Mu-rFM"; */
-"m2S-Mu-rFM.title" = "自动检测版本更新";
-
 /* Class = "NSTextFieldCell"; title = "Related file locations:"; ObjectID = "Oke-cL-DfS"; */
 "Oke-cL-DfS.title" = "相关文件路径:";
 
-/* Class = "NSTextFieldCell"; title = "Switch Proxy Mode:"; ObjectID = "Eu4-bo-oYs"; */
-"Eu4-bo-oYs.title" = "切换代理模式:";
+/* Class = "NSButtonCell"; title = "Feedback..."; ObjectID = "QjX-NH-23u"; */
+"QjX-NH-23u.title" = "问题反馈...";
 
-/* Class = "NSTextFieldCell"; title = "Toggle V2ray On/Off:"; ObjectID = "0rn-re-Wn3"; */
-"0rn-re-Wn3.title" = "打开关闭代理:";
-/* Class = "NSButtonCell"; title = "Automatically update servers from subscriptions"; ObjectID = "1FR-Yu-tqb"; */
-"1FR-Yu-tqb.title" = "启动或唤醒时自动从订阅中更新";
 /* Class = "NSButtonCell"; title = "Automatically select fastest server"; ObjectID = "WsS-I0-2Zs"; */
-"WsS-I0-2Zs.title" = "连接失败后选择的最快server重连";
+"WsS-I0-2Zs.title" = "自动选择最快的服务器";
+
+/* Class = "NSButtonCell"; title = "Check for updates automutically"; ObjectID = "m2S-Mu-rFM"; */
+"m2S-Mu-rFM.title" = "自动检查版本更新";
+
+/* Class = "NSTextFieldCell"; title = "~/.V2rayU/\n~/Library/Preferences/net.yanue.V2rayU.plist"; ObjectID = "vHZ-BS-uFb"; */
+"vHZ-BS-uFb.title" = "~/.V2rayU/\n~/Library/Preferences/net.yanue.V2rayU.plist";
